--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=5555
+spring.data.mongodb.uri=mongodb://localhost:27017/ReviewAndRating
+spring.data.mongodb.database=ReviewAndRating
+spring.application.name=reviewAndRating-Server
+debug=true
 
+#kindly add eureka and other required here aapka bhai younus
